--- a/index.html
+++ b/index.html
@@ -126,7 +126,41 @@
                     <video autoplay muted loop>
                         <source src="assets\vedio\appdem1.mp4" type="video/mp4">
                     </video>
-                    <img src="assets/images/iconImage.png" alt="Service Icon">
+                    <img src="assets/images/barcode.jpg" alt="Service Icon">
+                </div>
+                <div class="service-head">
+                    <h3>Product Listing</h3>
+                </div>
+                <div class="service-desc">
+                    <p>List Products From Barcode or OffBarcode</p>
+                </div>
+                <button class="explore">
+                    Explore
+                </button>
+            </div>
+            <div class="service-card">
+                <div class="content-in">
+                    <video autoplay muted loop>
+                        <source src="assets\vedio\appdem1.mp4" type="video/mp4">
+                    </video>
+                    <img src="assets/images/carts.jpg" alt="Service Icon">
+                </div>
+                <div class="service-head">
+                    <h3>Product Listing</h3>
+                </div>
+                <div class="service-desc">
+                    <p>List Products From Barcode or OffBarcode</p>
+                </div>
+                <button class="explore">
+                    Explore
+                </button>
+            </div>
+            <div class="service-card">
+                <div class="content-in">
+                    <video autoplay muted loop>
+                        <source src="assets\vedio\appdem1.mp4" type="video/mp4">
+                    </video>
+                    <img src="assets/images/orders.png" alt="Service Icon">
                 </div>
                 <div class="service-head">
                     <h3>Product Listing</h3>
@@ -177,41 +211,7 @@
                     <video autoplay muted loop>
                         <source src="assets\vedio\appdem1.mp4" type="video/mp4">
                     </video>
-                    <img src="assets/images/iconImage.png" alt="Service Icon">
-                </div>
-                <div class="service-head">
-                    <h3>Product Listing</h3>
-                </div>
-                <div class="service-desc">
-                    <p>List Products From Barcode or OffBarcode</p>
-                </div>
-                <button class="explore">
-                    Explore
-                </button>
-            </div>
-            <div class="service-card">
-                <div class="content-in">
-                    <video autoplay muted loop>
-                        <source src="assets\vedio\appdem1.mp4" type="video/mp4">
-                    </video>
-                    <img src="assets/images/iconImage.png" alt="Service Icon">
-                </div>
-                <div class="service-head">
-                    <h3>Product Listing</h3>
-                </div>
-                <div class="service-desc">
-                    <p>List Products From Barcode or OffBarcode</p>
-                </div>
-                <button class="explore">
-                    Explore
-                </button>
-            </div>
-            <div class="service-card">
-                <div class="content-in">
-                    <video autoplay muted loop>
-                        <source src="assets\vedio\appdem1.mp4" type="video/mp4">
-                    </video>
-                    <img src="assets/images/iconImage.png" alt="Service Icon">
+                    <img src="assets/images/barcode.jpg" alt="Service Icon">
                 </div>
                 <div class="service-head">
                     <h3>Product Listing</h3>
@@ -418,14 +418,181 @@
             </div>
         </div>
 
-        
+
+
+
+    </div>
+
+
+
+    <div class="center youtube-bar">
+        <div class="center-text the-youtube-center">
+            <h1>Watch Raad Start Growth of your Business</h1>
+        </div>
+        <div class="center-small-text the-youtube-text">
+            <p>Manage and run your business, all in one app. Get the insights to grow, with a live view of every
+                product
+                that comes in and goes out of your store.</p>
+        </div>
+    </div>
+
+
+
+    <div class="youtube-section">
+        <div class="screen-vedio">
+            <div class="the-vedio">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Fuzws1RYblA?si=nChxsr73wm8wizr9"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <div class="center FAQ">
+        <div class="center-text">
+            <h1>FAQ</h1>
+        </div>
+    </div>
+
+
+    <div class="the-FAQ">
+        <div class="FAQs">
+            <div class="question">
+                <h3>What is Raad?</h3>
+                <i class='bxr bx-chevron-down'></i>
+            </div>
+            <div class="answer">
+                <p>Raad is an all-in-one Point of Sale (POS) application that turns your smartphone into a complete
+                    business management system. It's designed for small to medium businesses to easily track sales,
+                    manage inventory, handle customer credit (Dayn), and get powerful insights to grow their business.
+                    It replaces your traditional paper notebook with a smart, secure, and simple solution.</p>
+            </div>
+            <div class="question">
+                <h3>Can I use Raad if my internet connection is not stable?</h3>
+                <i class='bxr bx-chevron-down'></i>
+            </div>
+            <div class="answer">
+                <p>Yes, absolutely. Raad is designed to work offline. You can continue to make sales, add products, and
+                    manage your inventory even without an internet connection. All the data is saved securely on your
+                    device and will automatically sync with your online account the moment you reconnect to the
+                    internet. You never have to worry about losing a sale due to bad connectivity.</p>
+                <!-- <i class='bxr bx-chevron-down'></i> -->
+            </div>
+            <div class="question">
+                <h3>What if I sell products that do not have a barcode?</h3>
+                <i class='bxr bx-chevron-down'></i>
+            </div>
+            <div class="answer">
+                <p>No problem at all. Raad is built for the reality of your shop. While you can use your phone's camera
+                    to instantly scan products with barcodes, you can also add any product manually. It's perfect for a
+                    business that sells both manufactured goods (like sodas) and local or handmade items (like sambusas
+                    or crafts).</p>
+                <!-- <i class='bxr bx-chevron-down'></i> -->
+            </div>
+
+            <div class="question">
+                <h3>How does the Customer Credit (Dayn) feature work?</h3>
+                <i class='bxr bx-chevron-down'></i>
+            </div>
+            <div class="answer">
+                <p>Our Dayn Tracker is a powerful tool to replace your messy paper debt book. When a customer buys on
+                    credit, you can record the sale and link it to their profile. The app securely tracks how much each
+                    customer owes you, with a full transaction history. You can also record partial payments and send
+                    polite payment reminders via WhatsApp or SMS with a single tap, helping you recover your money
+                    faster.</p>
+                <!-- <i class='bxr bx-chevron-down'></i> -->
+            </div>
+
+            <div class="question">
+                <h3>Is my business data safe and private?</h3>
+                <i class='bxr bx-chevron-down'></i>
+            </div>
+            <div class="answer">
+                <p>Yes, your data's security is our top priority. All your business information is securely stored in
+                    the cloud using industry-standard encryption. If your phone is lost, stolen, or broken, you don't
+                    lose anything. You can simply download Raad on a new device, log in to your account, and all your
+                    sales, products, and customer data will be instantly restored.</p>
+                <!-- <i class='bxr bx-chevron-down'></i> -->
+            </div>
+
+            <div class="question">
+                <h3>What is the "Level Up" system for the free plan?</h3>
+                <i class='bxr bx-chevron-down'></i>
+            </div>
+            <div class="answer">
+                <p>Instead of a heavily restricted free plan, Raad rewards you for using the app and helping our
+                    community grow. As a free user, you start at Level 1 with generous limits. By making sales and
+                    referring other business owners, you earn experience points (XP). As you gain XP, you "Level Up" and
+                    unlock higher limits for products, staff accounts, and more, all for free!</p>
+                <!-- <i class='bxr bx-chevron-down'></i> -->
+            </div>
+
+            <div class="question">
+                <h3>How do I print receipts for my customers?</h3>
+                <i class='bxr bx-chevron-down'></i>
+            </div>
+            <div class="answer">
+                <p>Raad can connect to most standard Bluetooth thermal printers. After a sale is complete, you will have
+                    the option to print a professional, physical receipt. You can also choose to save paper by sending a
+                    digital receipt directly to your customer via WhatsApp or SMS, giving you and your customers a
+                    modern and flexible experience.</p>
+                <!-- <i class='bxr bx-chevron-down'></i> -->
+            </div>
+        </div>
+    </div>
+
+
+    <div class="footer">
+        <div class="the-logo">
+            <img src="assets/images/raadlogo.png" alt="">
+        </div>
+        <div class="contact">
+            <i class='bxr  bx-send'  ></i> 
+            <a href="">support@raadapp.com</a>
+        </div>
+        <div class="lastly">
+            <div class="policies">
+                <a href="">Privacy Policy</a>
+                <a href="">Terms & Conditions</a>
+            </div>
+
+            <div class="policies rights">
+                <a>© 2025 Raad. All rights reserved.</a>
+            </div>
+        </div>
     </div>
 
 
 
 
 
+    <script>
+        const questions = document.querySelectorAll('.question');
 
+        questions.forEach(question => {
+            question.addEventListener('click', function () {
+                // Get the answer div (next sibling)
+                const answer = this.nextElementSibling;
+                const icon = this.querySelector('i');
+
+                // Toggle the answer visibility
+                answer.classList.toggle('show');
+
+                // Toggle the icon
+                if (answer.classList.contains('show')) {
+                    icon.classList.remove('bx-chevron-down');
+                    icon.classList.add('bx-chevron-up');
+                } else {
+                    icon.classList.remove('bx-chevron-up');
+                    icon.classList.add('bx-chevron-down');
+                }
+            });
+        });
+    </script>
 
 
 
