solved some sections

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="top-icon">
                     <i class='bxr  bx-scan-barcode'></i>
                 </div>
-                <div class="head-text in-demo">
+                <div class="head-text in-demo no-stop">
                     <h2>List new products and find existing ones, all by simply scanning a barcode.</h2>
                 </div>
                 <div class="head-description in-demo-desc">
@@ -291,7 +291,7 @@
                 <div class="top-icon">
                     <i class='bxr  bx-scan-barcode'></i>
                 </div>
-                <div class="head-text in-demo">
+                <div class="head-text in-demo no-stop">
                     <h2>List new products and find existing ones, all by simply scanning a barcode.</h2>
                 </div>
                 <div class="head-description in-demo-desc">
@@ -341,7 +341,7 @@
                 <div class="top-icon">
                     <i class='bxr  bx-scan-barcode'></i>
                 </div>
-                <div class="head-text in-demo">
+                <div class="head-text in-demo no-stop">
                     <h2>List new products and find existing ones, all by simply scanning a barcode.</h2>
                 </div>
                 <div class="head-description in-demo-desc">
