--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
         </div>
 
         <div class="hero">
-            <h2>Sell. Manage. Grow.</h2>
+            <h2>Sell. Manage. <br><span class="animated-word">
+            <span class="word">Grow.</span>
+            <span class="word">Scale.</span>
+            <span class="word">Thrive.</span>
+        </span></h2> 
         </div>
         <div class="hero-text">
             <p>Tired of manual books, scattered inventory, and complex sales? Raad brings your entire business into one
