--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
         <div class="hero">
             <h2>Sell. Manage. <br><span class="animated-word">
-            <span class="word">Grow.</span>
-            <span class="word">Scale.</span>
-            <span class="word">Thrive.</span>
-        </span></h2> 
+                    <span class="word">Grow.</span>
+                    <span class="word">Scale.</span>
+                    <span class="word">Thrive.</span>
+                </span></h2>
         </div>
         <div class="hero-text">
             <p>Tired of manual books, scattered inventory, and complex sales? Raad brings your entire business into one
@@ -63,13 +63,13 @@
 
         <div class="screen-shots">
             <div class="mobile smaller">
-                <img src="assets/images/home.png" alt="">
+                <img src="assets/images/the-report.png" alt="">
             </div>
             <div class="mobile">
                 <img src="assets/images/home.png" alt="">
             </div>
             <div class="mobile smaller">
-                <img src="assets/images/home.png" alt="">
+                <img src="assets/images/credit.png" alt="">
             </div>
             <img src="assets/images/mobile.png" alt="">
         </div>
@@ -82,11 +82,11 @@
 
     <div class="center">
         <div class="center-text">
-            <h1>All in one App, Your Entire Business. Simplified. Run Your Shop. Effortlessly.</h1>
+            <h1>From Notebooks <br> to Next-Gen.</h1>
         </div>
         <div class="center-small-text">
-            <p>Manage and run your business, all in one app. Get the insights to grow, with a live view of every product
-                that comes in and goes out of your store.</p>
+            <p>Upgrade from paper notebooks to a next-gen business tool. Raad digitizes your sales, inventory, and
+                customer credit, giving you live insights to run your shop with total confidence.</p>
         </div>
     </div>
 
@@ -103,20 +103,18 @@
 
         <div class="right">
             <div class="head-text great-text">
-                <h2>Your Smart Business Book.</h2>
+                <h2>Your Entire Business, in Your Pocket.</h2>
             </div>
             <div class="head-description">
-                <p>The Raad app helps you manage your business by upgrading your old notebook to a Smart Business Book.
-                    Everything you need to run your operations now fits right in your pocket.
-                    Instantly track all your sales and manage your complete inventory with ease.
-                    Gain powerful insights and maintain total control over your business data.
-                    Make smarter decisions and watch your business grow with Raad.</p>
+                <p>Forget messy notebooks and lost records. Raad transforms your smartphone into a powerful Point of
+                    Sale system. Instantly track sales, manage your complete inventory, and control customer credit
+                    (Dayn) with a few simple taps. Sell faster, work smarter, and reclaim your time.</p>
             </div>
             <button class="learn-more">Learn More</button>
         </div>
     </div>
 
-    <div class="services">
+    <!-- <div class="services">
         <div class="center-text the-service-center">
             <h1>Sell with confidence.</h1>
         </div>
@@ -228,15 +226,14 @@
                 </button>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="center demo-section">
         <div class="center-text">
-            <h1>All in one App, Your Entire Business. Simplified. Run Your Shop. Effortlessly.</h1>
+            <h1>Your Smartphone is Now Your <br> Point of Sale.</h1>
         </div>
         <div class="center-small-text">
-            <p>Manage and run your business, all in one app. Get the insights to grow, with a live view of every product
-                that comes in and goes out of your store.</p>
+            <p>Raad transforms the device you use every day into a complete, <br> intelligent Point of Sale system.</p>
         </div>
     </div>
 
@@ -282,7 +279,7 @@
                 <div class="phone-case">
                     <div class="real-phone">
                         <video autoplay loop muted playsinline>
-                            <source src="assets\vedio\appdem1.mp4" type="video/mp4">
+                            <source src="assets\vedio\barcode.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -293,14 +290,15 @@
         <div class="demo-card">
             <div class="demo-left">
                 <div class="top-icon">
-                    <i class='bxr  bx-scan-barcode'></i>
+                    <i class='bxr  bx-discount'></i>
                 </div>
                 <div class="head-text in-demo no-stop">
-                    <h2>List new products and find existing ones, all by simply scanning a barcode.</h2>
+                    <h2>Build a customer's order and finalize the sale, all with a simple, speedy checkout.</h2>
                 </div>
                 <div class="head-description in-demo-desc">
-                    <p>Transform your workflow with the power of barcode scanning. Raad turns your phone's camera into
-                        an instant business tool, helping you save time and eliminate manual entry errors.</p>
+                    <p>Accelerate your entire checkout process from start to finish. Raad turns your phone into a
+                        high-speed sales tool, letting you scan items directly to the cart and finalize transactions in
+                        just a few taps.</p>
                 </div>
 
 
@@ -309,19 +307,19 @@
                         <div class="tick">
                             <i class='bxr bx-check'></i>
                         </div>
-                        <p>List new products by scanning barcodes instantly.</p>
+                        <p>Tap any product to instantly add it to your customer's cart.</p>
                     </div>
                     <div class="tick-info">
                         <div class="tick">
                             <i class='bxr bx-check'></i>
                         </div>
-                        <p>Find any existing product quickly by scanning its barcode.</p>
+                        <p>Easily adjust the quantity of any item directly within the cart.</p>
                     </div>
                     <div class="tick-info">
                         <div class="tick">
                             <i class='bxr bx-check'></i>
                         </div>
-                        <p>Add products to cart effortlessly with a simple barcode scan.</p>
+                        <p>Select a payment type, like cash or credit, to complete the sale.</p>
                     </div>
                 </div>
             </div>
@@ -330,7 +328,7 @@
                 <div class="phone-case">
                     <div class="real-phone">
                         <video autoplay loop muted playsinline>
-                            <source src="assets\vedio\appdem1.mp4" type="video/mp4">
+                            <source src="assets\vedio\cart.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -343,14 +341,15 @@
         <div class="demo-card">
             <div class="demo-left">
                 <div class="top-icon">
-                    <i class='bxr  bx-scan-barcode'></i>
+                    <i class='bxr  bx-report'></i>
                 </div>
                 <div class="head-text in-demo no-stop">
-                    <h2>List new products and find existing ones, all by simply scanning a barcode.</h2>
+                    <h2>Track every single sale and see the big picture, with powerful reports for any date range.</h2>
                 </div>
                 <div class="head-description in-demo-desc">
-                    <p>Transform your workflow with the power of barcode scanning. Raad turns your phone's camera into
-                        an instant business tool, helping you save time and eliminate manual entry errors.</p>
+                    <p>Go beyond just making sales—understand what they mean. Raad gives you the power to see your
+                        business from every angle. Drill down into the details of any single order.
+                    </p>
                 </div>
 
 
@@ -359,19 +358,19 @@
                         <div class="tick">
                             <i class='bxr bx-check'></i>
                         </div>
-                        <p>List new products by scanning barcodes instantly.</p>
+                        <p>Review the complete details for every single order you make.</p>
                     </div>
                     <div class="tick-info">
                         <div class="tick">
                             <i class='bxr bx-check'></i>
                         </div>
-                        <p>Find any existing product quickly by scanning its barcode.</p>
+                        <p>Track all your orders from today, this week, or any month.</p>
                     </div>
                     <div class="tick-info">
                         <div class="tick">
                             <i class='bxr bx-check'></i>
                         </div>
-                        <p>Add products to cart effortlessly with a simple barcode scan.</p>
+                        <p>Get powerful reports with real insights to grow your business.</p>
                     </div>
                 </div>
             </div>
@@ -380,7 +379,7 @@
                 <div class="phone-case">
                     <div class="real-phone">
                         <video autoplay loop muted playsinline>
-                            <source src="assets\vedio\appdem1.mp4" type="video/mp4">
+                            <source src="assets\vedio\ordersreport.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -401,7 +400,7 @@
     <div class="sides about-bar">
         <div class="right">
             <div class="head-text">
-                <h2>Your Smart Business Book.</h2>
+                <h2>Your Smart Business <br>Book.</h2>
             </div>
             <div class="head-description">
                 <p>The Raad app helps you manage your business by upgrading your old notebook to a Smart Business Book.
@@ -410,7 +409,7 @@
                     Gain powerful insights and maintain total control over your business data.
                     Make smarter decisions and watch your business grow with Raad.</p>
             </div>
-            <button class="learn-more">Learn More</button>
+            <button class="learn-more mores">Learn More</button>
         </div>
 
 
@@ -445,10 +444,13 @@
     <div class="youtube-section">
         <div class="screen-vedio">
             <div class="the-vedio">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Fuzws1RYblA?si=nChxsr73wm8wizr9"
+                 <video autoplay loop muted playsinline>
+                            <source src="assets\vedio\real-demo.mp4" type="video/mp4">
+                        </video>
+                <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Fuzws1RYblA?si=nChxsr73wm8wizr9"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
             </div>
 
         </div>
@@ -555,7 +557,7 @@
             <img src="assets/images/raadlogo.png" alt="">
         </div>
         <div class="contact">
-            <i class='bxr  bx-send'  ></i> 
+            <i class='bxr  bx-send'></i>
             <a href="">support@raadapp.com</a>
         </div>
         <div class="lastly">
