--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="the-navs">
                 <ul>
                     <a href="#">
-                        <li>Home</li>
+                        <li class="home-link">Home</li>
                     </a>
-                    <a href="#">
+                    <a href="products/">
                         <li>Products</li>
                     </a>
                     <a href="#">
