Full butnot home

--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Raad is a Somali POS app that helps small businesses manage sales, inventory, and customer credit all from a smartphone.">
+    <meta name="keywords"
+        content="POS app Somalia, Raad POS, mobile point of sale, inventory management, dayn app, business management software">
+    <meta property="og:title" content="Raad POS App – Smart Point of Sale for Somali Businesses">
+    <meta property="og:description"
+        content="Sell, manage, and grow your business with Raad POS App. Track sales, inventory, and credit easily.">
+    <meta property="og:image" content="https://raadapp.com/assets/images/raadlogo.png">
+    <meta property="og:url" content="https://raadapp.com">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <meta name="author" content="Raad POS App Team">
+    <meta name="publisher" content="Raad">
+    <meta name="application-name" content="Raad POS App">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobileScreen.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'>
-    <title>Raad Somali Pos App</title>
+    <title>Raad POS App – Smart Point of Sale for Somali Businesses</title>
 </head>
 
 <body>
@@ -17,7 +34,7 @@
 
         <div class="navigation">
             <div class="logo">
-                <img src="assets/images/raadlogo.png" alt="">
+                <img src="assets/images/raadlogo.png" alt="Raad POS App Home Screen">
             </div>
 
             <div class="the-navs">
@@ -28,13 +45,13 @@
                     <a href="products/">
                         <li>Products</li>
                     </a>
-                    <a href="#">
+                    <a href="pricing/">
                         <li>Pricing</li>
                     </a>
-                    <a href="#">
+                    <a href="aboutus/">
                         <li>About Us</li>
                     </a>
-                    <a href="#">
+                    <a href="contactus/">
                         <li>Contact Us</li>
                     </a>
                 </ul>
@@ -444,9 +461,9 @@
     <div class="youtube-section">
         <div class="screen-vedio">
             <div class="the-vedio">
-                 <video autoplay loop muted playsinline>
-                            <source src="assets\vedio\real-demo.mp4" type="video/mp4">
-                        </video>
+                <video autoplay loop muted playsinline>
+                    <source src="assets\vedio\real-demo.mp4" type="video/mp4">
+                </video>
                 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Fuzws1RYblA?si=nChxsr73wm8wizr9"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -558,7 +575,7 @@
         </div>
         <div class="contact">
             <i class='bxr  bx-send'></i>
-            <a href="">support@raadapp.com</a>
+            <a href="mailto:support@raadapp.com">support@raadapp.com</a>
         </div>
         <div class="lastly">
             <div class="policies">
