--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -163,10 +164,21 @@
             animation-fill-mode: both;
         }
 
-        .stat-card:nth-child(1) { animation-delay: 0.1s; }
-        .stat-card:nth-child(2) { animation-delay: 0.2s; }
-        .stat-card:nth-child(3) { animation-delay: 0.3s; }
-        .stat-card:nth-child(4) { animation-delay: 0.4s; }
+        .stat-card:nth-child(1) {
+            animation-delay: 0.1s;
+        }
+
+        .stat-card:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .stat-card:nth-child(3) {
+            animation-delay: 0.3s;
+        }
+
+        .stat-card:nth-child(4) {
+            animation-delay: 0.4s;
+        }
 
         .stat-card:hover {
             transform: translateY(-10px);
@@ -241,7 +253,7 @@
             color: white;
         }
 
-        .mission-image-placeholder img{
+        .mission-image-placeholder img {
             height: 100%;
             width: 100%;
             object-fit: cover;
@@ -445,6 +457,7 @@
                 opacity: 0;
                 transform: translateY(30px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -503,7 +516,7 @@
                 height: 40px;
                 /* background-color: green; */
                 position: relative;
-                top: 25px;
+                top: 15px;
             }
 
             .the-navs {
@@ -523,18 +536,137 @@
                 /* background-color: green; */
                 position: absolute;
                 right: 20px;
-                top: 25px;
+                top: 15px;
                 color: #1C2582;
                 display: block;
             }
 
             .menu i {
                 font-size: 34px;
+                position: relative;
             }
+
+            .the-menu {
+                height: auto;
+                width: 360px;
+                background: linear-gradient(135deg, rgba(255, 255, 255, 0.95) 0%, rgba(240, 244, 255, 0.95) 50%, rgba(255, 255, 255, 0.95) 100%);
+                backdrop-filter: blur(15px);
+                -webkit-backdrop-filter: blur(15px);
+                border: 1px solid rgba(255, 255, 255, 0.63);
+                position: fixed;
+                z-index: 111;
+                top: 110px;
+                left: 22px;
+                right: 0;
+                border-radius: 10px;
+                padding: 20px 0;
+                display: none;
+                flex-direction: column;
+                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+                animation: slideDown 0.3s ease-out;
+            }
+
+            .the-menu ul {
+                display: flex;
+                flex-direction: column;
+                gap: 0;
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                width: 100%;
+            }
+
+            .the-menu a {
+                text-decoration: none;
+                width: 100%;
+                display: flex;
+                align-items: center;
+            }
+
+            .the-menu li {
+                padding: 16px 24px;
+                font-size: 16px;
+                font-weight: 500;
+                color: #333;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+                width: 100%;
+                box-sizing: border-box;
+            }
+
+            .the-menu li:hover {
+                background-color: rgba(59, 130, 246, 0.1);
+                color: #3b82f6;
+                padding-left: 28px;
+            }
+
+            .the-menu li:last-child {
+                border-bottom: none;
+                padding-bottom: 20px;
+            }
+
+            /* Add some spacing between menu items and login button */
+            .the-menu {
+                margin-bottom: 20px;
+            }
+
+            /* Login Button Styling for Mobile Menu */
+            .the-menu~.Login,
+            .menu+.the-menu .Login {
+                position: fixed;
+                bottom: 20px;
+                left: 20px;
+                right: 20px;
+                width: calc(100% - 40px);
+                padding: 14px 24px;
+                background: linear-gradient(135deg, #1C2582 0%, #2563eb 100%);
+                color: white;
+                border: none;
+                border-radius: 8px;
+                font-size: 16px;
+                font-weight: 600;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                z-index: 112;
+                box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3);
+            }
+
+            .the-menu~.Login:hover,
+            .menu+.the-menu .Login:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
+                background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%);
+            }
+
+            /* Animation for menu appearance */
+            @keyframes slideDown {
+                from {
+                    opacity: 0;
+                    transform: translateY(-10px);
+                }
+
+                to {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
+
+            /* Optional: Add this if you want the menu to hide/show with a toggle */
+            .the-menu.hidden {
+                display: none;
+            }
+
+            .the-menu.show {
+                display: flex;
+            }
+
+
 
         }
     </style>
 </head>
+
 <body>
     <!-- Navigation -->
     <div class="navigation">
@@ -543,13 +675,50 @@
         </div>
         <div class="the-navs">
             <ul>
-                <a href="../"><li>Home</li></a>
-                <a href="../products/"><li>Products</li></a>
-                <a href="../pricing/"><li>Pricing</li></a>
-                <a href="#"><li style="font-weight: 600;">About Us</li></a>
-                <a href="../contactus/"><li>Contact Us</li></a>
+                <a href="../">
+                    <li>Home</li>
+                </a>
+                <a href="../products/">
+                    <li>Products</li>
+                </a>
+                <a href="../pricing/">
+                    <li>Pricing</li>
+                </a>
+                <a href="#">
+                    <li style="font-weight: 600;">About Us</li>
+                </a>
+                <a href="../contactus/">
+                    <li>Contact Us</li>
+                </a>
             </ul>
         </div>
+        <button class="Login">Login</button>
+
+        <div class="menu">
+            <i class='bxr  bx-menu'></i>
+        </div>
+    </div>
+
+
+
+    <div class="the-menu">
+        <ul>
+            <a href="../">
+                <li class="home-link">Home</li>
+            </a>
+            <a href="../products/">
+                <li>Products</li>
+            </a>
+            <a href="../pricing/">
+                <li>Pricing</li>
+            </a>
+            <a href="../aboutus/">
+                <li>About Us</li>
+            </a>
+            <a href="../contactus/">
+                <li>Contact Us</li>
+            </a>
+        </ul>
         <button class="Login">Login</button>
     </div>
 
@@ -559,7 +728,9 @@
             <h1>TRANSFORMING BUSINESSES WITH SMART POS SOLUTIONS</h1>
             <p class="subtitle">Empowering retailers</p>
             <p class="description">
-                We believe every business deserves access to powerful, intuitive technology that simplifies operations and drives growth. Our mission is to revolutionize the way businesses manage sales, inventory, and customer relationships through innovative POS solutions.
+                We believe every business deserves access to powerful, intuitive technology that simplifies operations
+                and drives growth. Our mission is to revolutionize the way businesses manage sales, inventory, and
+                customer relationships through innovative POS solutions.
             </p>
         </div>
     </section>
@@ -592,13 +763,18 @@
             <div class="mission-content">
                 <h2>Our Mission</h2>
                 <p>
-                    At our core, we're passionate about helping businesses thrive in the digital age. We understand the challenges retailers face daily, from managing inventory to providing exceptional customer experiences.
+                    At our core, we're passionate about helping businesses thrive in the digital age. We understand the
+                    challenges retailers face daily, from managing inventory to providing exceptional customer
+                    experiences.
                 </p>
                 <p>
-                    That's why we've built a comprehensive POS system that combines powerful features with intuitive design. Our platform adapts to your needs, whether you're running a small boutique or managing multiple locations across the country.
+                    That's why we've built a comprehensive POS system that combines powerful features with intuitive
+                    design. Our platform adapts to your needs, whether you're running a small boutique or managing
+                    multiple locations across the country.
                 </p>
                 <p>
-                    We're committed to continuous innovation, always listening to our customers and evolving our platform to meet the changing demands of modern commerce.
+                    We're committed to continuous innovation, always listening to our customers and evolving our
+                    platform to meet the changing demands of modern commerce.
                 </p>
             </div>
             <div class="mission-image">
@@ -617,32 +793,35 @@
         </div>
         <div class="values-container">
             <div class="value-card">
-                <div class="value-icon"><i class='bxr  bx-light-bulb-alt'  ></i> </div>
+                <div class="value-icon"><i class='bxr  bx-light-bulb-alt'></i> </div>
                 <h3>Innovation</h3>
-                <p>We constantly push boundaries to deliver cutting-edge solutions that keep our clients ahead of the competition.</p>
+                <p>We constantly push boundaries to deliver cutting-edge solutions that keep our clients ahead of the
+                    competition.</p>
             </div>
             <div class="value-card">
-                <div class="value-icon"><i class='bxr  bx-handshake'  ></i> </div>
+                <div class="value-icon"><i class='bxr  bx-handshake'></i> </div>
                 <h3>Customer First</h3>
-                <p>Every decision we make is centered around delivering exceptional value and support to our customers.</p>
+                <p>Every decision we make is centered around delivering exceptional value and support to our customers.
+                </p>
             </div>
             <div class="value-card">
-                <div class="value-icon"><i class='bxr  bx-lock'  ></i> </div>
+                <div class="value-icon"><i class='bxr  bx-lock'></i> </div>
                 <h3>Security</h3>
-                <p>We prioritize the protection of your data and transactions with enterprise-grade security measures.</p>
+                <p>We prioritize the protection of your data and transactions with enterprise-grade security measures.
+                </p>
             </div>
             <div class="value-card">
-                <div class="value-icon"><i class='bxr  bx-thunder'  ></i> </div>
+                <div class="value-icon"><i class='bxr  bx-thunder'></i> </div>
                 <h3>Reliability</h3>
                 <p>Our systems are built for 99.9% uptime, ensuring your business never misses a beat.</p>
             </div>
             <div class="value-card">
-                <div class="value-icon"><i class='bxr  bx-florist'  ></i> </div>
+                <div class="value-icon"><i class='bxr  bx-florist'></i> </div>
                 <h3>Growth</h3>
                 <p>We grow alongside our customers, providing scalable solutions that evolve with your business.</p>
             </div>
             <div class="value-card">
-                <div class="value-icon"><i class='bxr  bx-palette'  ></i> </div>
+                <div class="value-icon"><i class='bxr  bx-palette'></i> </div>
                 <h3>Simplicity</h3>
                 <p>Complex functionality shouldn't mean complicated interfaces. We make powerful tools easy to use.</p>
             </div>
@@ -666,7 +845,7 @@
                 <div class="team-avatar">SM</div>
                 <h3>Abdirasak Mohamed</h3>
                 <p class="position">Software Developer & Co-founder</p>
-                <p>Tech innovator specializing in cloud infrastructure, software development scalable POS  solutions.</p>
+                <p>Tech innovator specializing in cloud infrastructure, software development scalable POS solutions.</p>
             </div>
             <div class="team-card">
                 <div class="team-avatar">MJ</div>
@@ -674,7 +853,7 @@
                 <p class="position">Head of Product & Co-founder</p>
                 <p>Product strategist focused on delivering user-centric features that drive business growth.</p>
             </div>
-            
+
         </div>
     </section>
 
@@ -682,9 +861,71 @@
     <section class="cta-section">
         <div class="cta-content">
             <h2>Ready to Transform Your Business?</h2>
-            <p>Join thousands of successful businesses using our POS system to streamline operations and boost sales.</p>
+            <p>Join thousands of successful businesses using our POS system to streamline operations and boost sales.
+            </p>
             <button class="cta-button">Get Started Today</button>
         </div>
     </section>
+
+
+    <script>
+        // Mobile Menu Toggle Functionality
+        document.addEventListener('DOMContentLoaded', function () {
+            const menuButton = document.querySelector('.menu');
+            const menuIcon = menuButton.querySelector('i');
+            const theMenu = document.querySelector('.the-menu');
+            const menuLinks = theMenu.querySelectorAll('a');
+
+            // Toggle menu on button click
+            menuButton.addEventListener('click', function () {
+                theMenu.classList.toggle('show');
+                theMenu.classList.toggle('hidden');
+
+                // Change icon from menu to X and back
+                if (theMenu.classList.contains('show')) {
+                    menuIcon.classList.remove('bx-menu');
+                    menuIcon.classList.add('bx-x');
+                } else {
+                    menuIcon.classList.remove('bx-x');
+                    menuIcon.classList.add('bx-menu');
+                }
+            });
+
+            // Close menu when a link is clicked
+            menuLinks.forEach(link => {
+                link.addEventListener('click', function () {
+                    theMenu.classList.remove('show');
+                    theMenu.classList.add('hidden');
+                    menuIcon.classList.remove('bx-x');
+                    menuIcon.classList.add('bx-menu');
+                });
+            });
+
+            // Close menu when login button is clicked
+            const loginButton = theMenu.querySelector('.Login');
+            if (loginButton) {
+                loginButton.addEventListener('click', function () {
+                    theMenu.classList.remove('show');
+                    theMenu.classList.add('hidden');
+                    menuIcon.classList.remove('bx-x');
+                    menuIcon.classList.add('bx-menu');
+                });
+            }
+
+            // Optional: Close menu when clicking outside of it
+            document.addEventListener('click', function (event) {
+                const isClickInsideMenu = theMenu.contains(event.target);
+                const isClickOnMenuButton = menuButton.contains(event.target);
+
+                if (!isClickInsideMenu && !isClickOnMenuButton && theMenu.classList.contains('show')) {
+                    theMenu.classList.remove('show');
+                    theMenu.classList.add('hidden');
+                    menuIcon.classList.remove('bx-x');
+                    menuIcon.classList.add('bx-menu');
+                }
+            });
+        });
+    </script>
 </body>
+
 </html>
